# python-template

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  cookiecutter.json  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: test.yml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: __init__.py  test_none.py
{{ cookiecutter.project_name }}/: .dockerignore  .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg
{{ cookiecutter.project_name }}/.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
{{ cookiecutter.project_name }}/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
{{ cookiecutter.project_name }}/.github/workflows/: deploy-pypi.yml  docker-stable.yml  docker-staging.yml  test.yml
{{ cookiecutter.project_name }}/docs/: Makefile  conf.py  remove_trash.py  requirements.txt
{{ cookiecutter.project_name }}/docs/_autoapi_templates/: index.rst
{{ cookiecutter.project_name }}/docs/_templates/: badges.html  github.html  moreinfo.html
{{ cookiecutter.project_name }}/docs/locale/ru/LC_MESSAGES/: index.po
{{ cookiecutter.project_name }}/docs/locale/ru/LC_MESSAGES/api/: index.po
{{ cookiecutter.project_name }}/docs/locale/ru/LC_MESSAGES/pages/: changelog.po  contributing.po
{{ cookiecutter.project_name }}/docs/locale/uk_UA/LC_MESSAGES/: index.po
{{ cookiecutter.project_name }}/docs/locale/uk_UA/LC_MESSAGES/api/: index.po
{{ cookiecutter.project_name }}/docs/locale/uk_UA/LC_MESSAGES/pages/: changelog.po  contributing.po
{{ cookiecutter.project_name }}/docs/modules/: modules.rst
{{ cookiecutter.project_name }}/locales/en/LC_MESSAGES/: messages.po
{{ cookiecutter.project_name }}/locales/ru/LC_MESSAGES/: messages.po
{{ cookiecutter.project_name }}/locales/uk/LC_MESSAGES/: messages.po
{{ cookiecutter.project_name }}/src/: __main__.py  config.py  utils.py
{{ cookiecutter.project_name }}/tests/: test_commit_and_push.py
{{ cookiecutter.project_name }}/tests/test_example/: __init__.py
{{ cookiecutter.project_name }}/{{cookiecutter.project_name.lower().replace('-', '_')}}/: TODO  __init__.py
