[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "fire-square-style"
description = "Пример стиля кода для всех Python проектов организации Fire square."
version = "0.1.0"
license = "MIT"
authors = ["fire-square <team@firesquare.ru>"]
readme = "README.md"
repository = "https://github.com/fire-square/fire-square-style"


[tool.poetry.dependencies]
python = "^3.7,<=3.11"

cookiecutter = "~2.1"
jinja2-git = "~1.3"
MarkupSafe = "~1"
lice = "~0.6"


[tool.poetry.group.make.dependencies]
pre-commit = "~2.20"
safety = "~2.3"


[tool.poetry.group.tests.dependencies]
pytest = "~7.2"
pytest-cov = "~4.0"
pytest-mock = "~3.10"
pytest-testmon = "~1.4"
pytest-randomly = "~3.12"
Faker = "~15.1"


[tool.poetry.group.github_hooks]
optional = true

[tool.poetry.group.github_hooks.dependencies]
requests = "~2.28"
GitPython = "~3.1"


[tool.black]
line-length = 120
target-version = ['py310']
extend-exclude = "{{ cookiecutter.project_name }}"
