[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "python-template"
description = "My own template for any Python project."
version = "0.1.0"
license = "MIT"
authors = ["PerchunPak <python-template.author@perchun.it>"]
readme = "README.md"
repository = "https://github.com/PerchunPak/python-template"


[tool.poetry.dependencies]
python = "^3.7,<3.12"

cruft = "~2.12"
lice = "~0.6"


[tool.poetry.group.make.dependencies]
pre-commit = "~2.21"
safety = "~2.3"


[tool.poetry.group.tests.dependencies]
pytest = "~7.2"
pytest-cov = "~4.0"
pytest-mock = "~3.10"
pytest-testmon = "~1.4"
pytest-randomly = "~3.12"
Faker = "~17.6"


[tool.poetry.group.github_hooks]
optional = true

[tool.poetry.group.github_hooks.dependencies]
requests = "~2.28"
GitPython = "~3.1"


[tool.black]
line-length = 120
target-version = ['py38']
extend-exclude = "{{ cookiecutter.project_name }}"


[tool.cruft]
skip = ["{{cookiecutter.project_name.lower().replace('-', '_')}}"]
