[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "{{ cookiecutter.project_name }}"
description = "{{ cookiecutter.project_description }}"
version = "0.1.0"
license = "{{ cookiecutter.license|upper }}"
authors = []
readme = "README.md"
repository = "https://github.com/{{ cookiecutter.organization }}/{{ cookiecutter.project_name }}"


[tool.poetry.dependencies]
python = "^3.8"

# Our dependecies
omegaconf = "~2.2"
structlog = "22.1.0"
### For colors in structlog ###
### Only needed for Windows ###
colorama = { version = "*", markers="platform_system == 'Windows'" }

# Docs


[tool.poetry.group.make.dependencies]
black = "~22"
isort = "~5.10"
pycln = "~2.1"
doc8 = "~1.0"
mypy = "0.971"
flake8 = "~5"
flake8-docstrings = "~1"
pydocstyle = ">=4.0.0"
safety = "~2.1"

pre-commit = "~2.20"


[tool.poetry.group.tests.dependencies]
pytest = "~7.1"
pytest-cov = "~3.0"
pytest-mock = "~3.8"
pytest-testmon = "~1.3"
pytest-randomly = "~3.12"
Faker = "~14.2"


[tool.poetry.group.docs.dependencies]
sphinx = "~5.1"
sphinx-autodoc-typehints = "~1.19"
sphinx-autoapi = "~1.9"
sphinx-intl = "~2.0"  # only for locales
furo = "*"
m2r2 = "~0.3"
tomli = "~2.0"
packaging = "21.3"


[tool.poetry.group.github_hooks]
optional = true

[tool.poetry.group.github_hooks.dependencies]
GitPython = "~3.1"


[tool.black]
line-length = 120
target-version = ['py310']
