[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "{{ cookiecutter.project_name }}"
description = "{{ cookiecutter.project_description }}"
version = "0.1.0"
license = "{{ cookiecutter.license|upper }}"
authors = []
readme = "README.md"
repository = "https://github.com/{{ cookiecutter.organization }}/{{ cookiecutter.project_name }}"


[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"

# Our dependecies
omegaconf = "~2.3"


[tool.poetry.group.make.dependencies]
black = "~23"
isort = "~5.12"
pycln = "~2.3"
doc8 = "~1.1"
flake8 = "~6"
flake8-docstrings = "~1"
flake8-ensure-ascii = "~1.0"
pydocstyle = ">=4.0.0"
safety = "~2.3"
cruft = "~2.15"
lice = "~0.6"  # for generating template

pre-commit = "~3.5"


[tool.poetry.group.typing.dependencies]
mypy = "~1.7"


[tool.poetry.group.tests.dependencies]
pytest = "~7.4"
pytest-cov = "~4.1"
pytest-mock = "~3.12"
pytest-testmon = "~2.1"
pytest-randomly = "~3.15"
Faker = "~20.0"


[tool.poetry.group.docs.dependencies]
sphinx = "~7.1"
sphinx-autodoc-typehints = "~1.25"
sphinx-autoapi = "~3.0"
sphinx-intl = "~2.1"  # only for locales
furo = "*"
m2r2 = "~0.3"
tomli = { version = "~2.0", markers = "python_version < '3.11'" }
packaging = "23.2"


[tool.poetry.group.github_hooks]
optional = true

[tool.poetry.group.github_hooks.dependencies]
requests = "~2.31"
GitPython = "~3.1"


[tool.black]
line-length = 120
target-version = ['py38']
